# polygon-to-tile-list

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  gdal_intersecting_tiles_finder.cpp  gdal_intersecting_tiles_finder.hpp  polygon-to-tile-list.cpp  projection.hpp  tile_list.cpp  tile_list.hpp  utils.cpp  utils.hpp
